--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cross-env": "^5.0.1",
+    "element-ui": "^2.3.7",
     "koa": "^2.4.1",
     "muse-ui": "^2.1.0",
     "nuxt": "latest",
@@ -23,6 +24,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/proxy": "^1.2.4",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "backpack-core": "^0.3.0",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
