--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-nuxt-ssr-koa",
+  "name": "juejin-nuxt",
   "version": "1.1.0",
   "description": "Nuxt.js project",
   "author": "fozero",
